D-44295 fixing css link color on mobile

--- a/public/styles/projects/makeup-date/makeup-tutorial/mobile.scss
+++ b/public/styles/projects/makeup-date/makeup-tutorial/mobile.scss
@@ -243,7 +243,7 @@ section a:active {
 		}
 
 		.pinkBg {
-			background-color: #cc6666;
+			background-color: $lightPink;
 			color: #000;
 			margin: 0.75em auto;
 			font-weight: 800;
